--- a/client/css/app.css
+++ b/client/css/app.css
@@ -38,6 +38,11 @@ body {
     text-align: left;
 }
 
+.poolsList .allBracketsGrid {
+    margin-left: 20px;
+    max-width: 600px;
+}
+
 /* styles for the ng-grid directive on the create/edit bracket page */
 .selectTeamsGrid {
     border: 1px solid rgb(212,212,212);
