Adds strikethrough text decoration for eliminated teams in bracket grid

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -75,6 +75,7 @@ body {
 .bracketGrid .eliminated .col0,
 .bracketGrid .eliminated .col1 {
     color: darkgray;
+    text-decoration: line-through;
 }
 /* all of the numbers in the table should be right-aligned */
 .bracketGrid .ngCell {
