code cleanup and very minor fixes

--- a/client/views/brackets/view.html
+++ b/client/views/brackets/view.html
@@ -55,7 +55,7 @@
       <a class="btn btn-primary" ng-href="#/pools/{{ pool.$id }}/brackets/{{ bracketId }}/edit">Change Your Teams</a>
     </div>
     <div class="col-md-2">
-      <button ng-click="removeBracket()" class="btn btn-danger">Delete Your Teams</button>
+      <button ng-click="removeBracket()" class="btn btn-danger">Delete Your Bracket</button>
     </div>
   </div>
 </div>
