Adds an option to hide other users' brackets before the tourney starts

--- a/client/views/pools/edit.html
+++ b/client/views/pools/edit.html
@@ -18,6 +18,16 @@
             </label>
           </div>
         </div>
+        <br/><br/>
+        <div class="col-md-offset-2 col-md-10">
+          <div class="checkbox">
+            <label>
+              <input id="hideBracketsBeforeTourney" name="hideBracketsBeforeTourney" data-ng-model="pool.hideBracketsBeforeTourney" type="checkbox">
+              Hide brackets until the tourney starts? <br/>
+              <em>Users can still edit their own bracket, if logged in.</em>
+            </label>
+          </div>
+        </div>
       </div>
       <br/>
 
