--- a/client/views/brackets/edit.html
+++ b/client/views/brackets/edit.html
@@ -5,7 +5,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="form-group pull-left">
+          <div class="form-group pull-left" ng-class="{'has-error': !bracket.name}">
             <label class="col-md-3 control-label" for="name" style="text-align:left;">Name</label>
             <div class="col-md-9">
               <input id="name" data-ng-model="bracket.name" type="text" placeholder="name of bracket" class="form-control input-md" required autofocus>
