Removes autofocus from the bracket name field, since it doesn't work
What a PITA it is to get something simple like "autofocus" working with angular: http://stackoverflow.com/questions/14833326/how-to-set-focus-on-input-field

--- a/client/views/brackets/edit.html
+++ b/client/views/brackets/edit.html
@@ -32,14 +32,14 @@
           <div class="form-group pull-left" ng-class="{'has-error': !bracket.name}">
             <label class="col-md-5 control-label" for="name" style="text-align:left;">Bracket Name</label>
             <div class="col-md-7">
-              <input id="name" data-ng-model="bracket.name" type="text" placeholder="name of bracket" class="form-control input-md" required autofocus>
+              <input id="name" data-ng-model="bracket.name" type="text" placeholder="name of bracket" class="form-control input-md" required>
             </div>
           </div>
         </div>
         <br/>
         <div class="row">
           <div class="col-sm-1">
-              <a class="btn btn-default" href="#/pools/{{ poolId }}">Cancel</a>
+            <a class="btn btn-default" href="#/pools/{{ poolId }}">Cancel</a>
           </div>
           <div class="col-sm-1">
             <button data-ng-click="saveBracket()"
@@ -54,5 +54,4 @@
 
     </fieldset>
   </form>
-  <p data-ng-show="err" class="error">{{err}}</p>
 </div>
