Adds clarifying notes to rules page (home.html)

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -79,10 +79,26 @@
 The rules for the game are simple: you pick 13 teams whose seeds add up to 100. For example, if UNC is a # 1 seed and VCU is a #13 seed and you pick them, they combine to make 14, and you need to select 11 other teams whose seeds add up to 86.
       </p>
       <p>
-You earn points every time one of your chosen teams wins a game. If a team wins a game, you get the value of their seed plus a designated point amount, which ascends each round as follows: 1, 2, 4, 8, 16, 32. So, if you picked VCU as a #13 seed and they win games in the first three rounds, you would get 13+1, 13+2, and 13+4.
+You earn points every time one of your chosen teams wins a game.
+If a team wins a game, you get the value of their seed plus a designated point amount, which ascends each round as follows: 1, 2, 4, 8, 16, 32.
+So, if you picked VCU as a #13 seed and they win games in the first three rounds, you would get 13+1, 13+2, and 13+4.
       </p>
       <br>
       <p>To get started now, <a href="#/pools">select a March Madness pool</a>, and pick your 13 teams!</p>
+        <br>
+          <p style="text-decoration: underline">Some more notes:</p>
+        <br>
+          <ol>
+              <li>If you've forgotten your password, email me (skingsland@gmail.com) and I'll manually reset it for you. (The change/reset password feature is out of order.)</li>
+              <br>
+              <li>Up until the start of the first game in the "round of 64", only you can see your bracket, when you're logged in.</li>
+              <br>
+              <li>After that, everyone else can see your bracket, and all brackets are unchangeable.</li>
+              <br>
+              <li>The website doesn't have a way to let you select the winner of a play-in game in advance.
+                  So if you want to pick one of the play-in teams, you'll have to do it after they've won their play-in game
+                  but before the start of the tourney.</li>
+          </ol>
+      </div>
     </div>
-  </div>
 </div>
