--- a/client/partials/account.html
+++ b/client/partials/account.html
@@ -1,24 +1,20 @@
 <h2>Change Password</h2>
 <br/>
-<div class="alert alert-info" role="alert" ng-show-auth="['logout','error']">
+<div class="alert alert-info" role="alert" ng-hide="isLoggedIn">
     <h4>This page only works after you have logged in. Please click "Log In" in the upper right corner!</h4>
 </div>
 
-<form ng-show-auth="'login'" class="accountManagement">
-    <div class="form-group">
-      <label for="oldpass">Old Password</label>
-      <input type="password" class="form-control" id="oldpass" placeholder="Your current password" ng-keypress="reset()" ng-model="oldpass">
-    </div>
+<form ng-show="isLoggedIn" class="accountManagement">
     <div class="form-group">
       <label for="newpass">New Password</label>
       <input type="password" class="form-control" id="newpass" placeholder="Your new password" ng-keypress="reset()" ng-model="newpass">
     </div>
     <div class="form-group">
-      <label for="confirm">Confirm Password</label>
+      <label for="confirm">Confirm New Password</label>
       <input type="password" class="form-control" id="confirm" placeholder="Your new password" ng-keypress="reset()" ng-model="confirm">
     </div>
 
-    <button type="submit" class="btn btn-primary" ng-click="updatePassword()">Update Password</button>
+    <button type="submit" class="btn btn-primary" ng-click="changePassword()">Change Password</button>
     <br>
     <br>
     <div class="alert alert-danger" role="alert" ng-show="err">{{err}}</div>
