--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,9 +1,9 @@
 <h2>Login Page</h2>
 
-<form ng-cloak>
+<form>
     <label>
         <span>email</span>
-        <input type="email" ng-model="email" />
+        <input type="text" ng-model="email" />
     </label>
     <label>
         <span>password</span>
