--- a/client/views/header.html
+++ b/client/views/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#">Rules</a>
+      <a class="navbar-brand" href="#/home">Rules</a>
 
       <ul class="navbar-nav">
         <li data-ng-repeat="entry in navbarEntries" data-ng-class="{ active: entry.isActive }">
@@ -26,18 +26,17 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" ng-show-auth="'login'">
+        <li class="dropdown" ng-show="isLoggedIn">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             {{ user.name }}<b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <!-- TODO: fix this (deletes the user from firebase, and crashes the browser tab) -->
-            <!--<li><a href="" ng-click="changePassword()">Change Password</a></li>-->
+            <li><a href="" ng-click="changePassword()">Change Password</a></li>
             <li><a href="" ng-click="logout()">Logout</a></li>
           </ul>
         </li>
 
-        <li class="dropdown" ng-show-auth="['logout','error']" ng-controller="LoginCtrl">
+        <li class="dropdown" ng-hide="isLoggedIn" ng-controller="LoginCtrl">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Register <b class="caret"></b></a>
 
           <!-- Using class="dropdown-menu" breaks email address auto-complete selection in the header login/register forms. -->
@@ -71,7 +70,7 @@
           </ul>
         </li>
 
-        <li class="dropdown" ng-show-auth="['logout','error']" ng-controller="LoginCtrl">
+        <li class="dropdown" ng-hide="isLoggedIn" ng-controller="LoginCtrl">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Log in <b class="caret"></b></a>
           <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
             <li>
@@ -90,13 +89,12 @@
                       <button ng-click="login(); $event.stopPropagation();" class="btn btn-success btn-block">Log in</button>
                     </div>
 
-                    <!-- TODO: fix this (deletes the user from firebase, and crashes the browser tab) -->
-                    <!--<div class="form-group">-->
-                      <!--<button ng-click="resetPassword(); $event.stopPropagation();" class="btn btn-danger btn-block"-->
-                              <!--data-toggle="tooltip" data-placement="bottom" title="Sends you an email with a new password">-->
-                        <!--Reset Password-->
-                      <!--</button>-->
-                    <!--</div>-->
+                    <div class="form-group">
+                      <button ng-click="resetPassword(); $event.stopPropagation();" class="btn btn-danger btn-block"
+                              data-toggle="tooltip" data-placement="bottom" title="Sends you a password-reset email, containing a link that may be used to change your password">
+                        Reset Password
+                      </button>
+                    </div>
 
                     <p class="alert-info">{{msg}}</p>
                     <p ng-show="err" class="alert-danger">{{err}}</p>
