--- a/client/views/header.html
+++ b/client/views/header.html
@@ -17,7 +17,7 @@
           <a href="#{{entry.link}}">{{entry.title}}</a>
         </li>
       </ul>
-      <span class="navbar-text tourney-countdown" ng-if="!hasTourneyStarted">
+      <span class="navbar-text tourney-countdown" ng-if="hasTourneyStarted != null && !hasTourneyStarted">
         Tourney starts on {{tourneyStartTime.utcOffset('-0400').format("MMM D [at] h:mm a [EDT]")}}.
         <timer end-time="tourneyStartTime">{{days}} days, {{hours}}h {{minutes}}m {{seconds}}s</timer>
         left to finalize your bracket!
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" ng-show="isLoggedIn">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown">
             {{ user.name }}<b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
@@ -36,8 +36,8 @@
           </ul>
         </li>
 
-        <li class="dropdown" ng-hide="isLoggedIn" ng-controller="LoginCtrl">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Register <b class="caret"></b></a>
+        <li class="dropdown" ng-show="isLoggedIn != null && !isLoggedIn" ng-controller="LoginCtrl">
+          <a class="dropdown-toggle" data-toggle="dropdown">Register <b class="caret"></b></a>
 
           <!-- Using class="dropdown-menu" breaks email address auto-complete selection in the header login/register forms. -->
           <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
@@ -70,8 +70,8 @@
           </ul>
         </li>
 
-        <li class="dropdown" ng-hide="isLoggedIn" ng-controller="LoginCtrl">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Log in <b class="caret"></b></a>
+        <li class="dropdown" ng-show="isLoggedIn != null && !isLoggedIn" ng-controller="LoginCtrl">
+          <a class="dropdown-toggle" data-toggle="dropdown">Log in <b class="caret"></b></a>
           <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
             <li>
               <div class="row">
