--- a/client/views/pools/edit.html
+++ b/client/views/pools/edit.html
@@ -1,4 +1,4 @@
-<div data-ng-init="findOnePool()" class="editPool">
+<div ng-init="findOnePool()" class="editPool">
   <form class="form-horizontal" role="form">
     <fieldset>
       <legend>Your pool</legend>
@@ -6,14 +6,14 @@
       <div class="form-group">
         <label class="col-md-1 control-label" for="name">Name</label>
         <div class="col-md-offset-1 col-md-10">
-          <input id="name" name="name" data-ng-model="pool.name" type="text" placeholder="name of pool" class="form-control input-md" required autofocus>
+          <input id="name" name="name" ng-model="pool.name" type="text" placeholder="name of pool" class="form-control input-md" required autofocus>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
           <div class="checkbox">
             <label>
-              <input id="allowBracketChangesDuringTourney" name="allowBracketChangesDuringTourney" data-ng-model="pool.allowBracketChangesDuringTourney" type="checkbox">
+              <input id="allowBracketChangesDuringTourney" name="allowBracketChangesDuringTourney" ng-model="pool.allowBracketChangesDuringTourney" type="checkbox">
               Allow brackets to be created or changed after the tourney starts?
             </label>
           </div>
@@ -22,7 +22,7 @@
         <div class="col-md-offset-2 col-md-10">
           <div class="checkbox">
             <label>
-              <input id="hideBracketsBeforeTourney" name="hideBracketsBeforeTourney" data-ng-model="pool.hideBracketsBeforeTourney" type="checkbox">
+              <input id="hideBracketsBeforeTourney" name="hideBracketsBeforeTourney" ng-model="pool.hideBracketsBeforeTourney" type="checkbox">
               Hide brackets until the tourney starts? <br/>
               <em>Users can still edit their own bracket, if logged in.</em>
             </label>
@@ -32,19 +32,15 @@
       <br/>
 
       <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-          <!-- display a simple "save" button if the user is changing an already-existing pool -->
-          <a class="btn btn-primary" href="#/pools" data-ng-show="model.poolId">Save</a>
-        </div>
-      </div>
-
-      <!-- otherwise if the user is creating a new pool, display cancel and submit buttons -->
-      <div class="form-group" data-ng-show="!model.poolId">
         <div class="col-md-offset-2 col-md-2">
           <a class="btn btn-default" href="#/pools">Cancel</a>
         </div>
         <div class="col-md-4">
-          <button class="btn btn-primary" id="createpool" name="createpool" data-ng-click="createPool()">Create Pool</button>
+          <!-- if the user is editing an already-existing pool, the form fields are bound to db,
+               so "save" button just needs to take user back to the pools page: -->
+          <a class="btn btn-primary" href="#/pools" ng-show="model.poolId">Save</a>
+          <!-- else the user is creating a new pool: -->
+          <button class="btn btn-primary" id="createpool" name="createpool" ng-click="createPool()" ng-show="!model.poolId">Create Pool</button>
         </div>
       </div>
     </fieldset>
