removes school mascot from the picks column in the bracket table
It was too much information.

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -82,9 +82,9 @@ body {
 .bracketTable th small {
     font-weight: normal;
 }
-/* picks column (contains school name and mascot) */
+/* picks column (school name) */
 .bracketTable th:nth-child(1) {
-    width: 190px;
+    width: 150px;
     min-width: 130px;
 }
 /* seed column */
