Add "Pick for me" and "Clear" buttons to edit bracket page

--- a/client/views/brackets/edit.html
+++ b/client/views/brackets/edit.html
@@ -26,6 +26,15 @@
           </div>
         </div>
         <br/>
+        <div class="row">
+          <div class="col-sm-1">
+            <a data-ng-click="randomPicks()" class="btn btn-info">Pick for me</a>
+          </div>
+          <div class="col-sm-1">
+            <a data-ng-click="clearPicks()" class="btn btn-info pull-right">Clear</a>
+          </div>
+        </div>
+        <br/>
         <h4><em>NOTE: some teams won't be available for selection until <strong>after</strong> the play-in games are over.</em></h4>
         <br/>
         <div class="row">
