The new buttons are NOT "submit" buttons
Now when you hit "enter" in the bracket name text field, it's the same as clicking the save/update button.

--- a/client/views/brackets/edit.html
+++ b/client/views/brackets/edit.html
@@ -28,8 +28,8 @@
         <br/>
         <div class="row">
           <div class="btn-toolbar">
-            <button data-ng-click="randomPicks()" class="btn btn-info">Pick for me</button>
-            <button data-ng-click="clearPicks()" class="btn btn-danger">Clear</button>
+            <button type="button" data-ng-click="randomPicks()" class="btn btn-info">Pick for me</button>
+            <button type="button" data-ng-click="clearPicks()" class="btn btn-danger">Clear</button>
           </div>
         </div>
         <br/>
