--- a/client/views/pools/view.html
+++ b/client/views/pools/view.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-md-6">
       <h2 style="display: inline-block; padding-right: 30px">{{ pool.name }}</h2>
-      <strong>Manager: </strong>{{ manager.name }}
-      <br/>
+      <span class="text-nowrap"><strong>Manager: </strong>{{ manager.name }}</span>
+      <br/><br/>
       <a class="btn btn-default" href="#/pools" style="margin-right: 20px">View all pools</a>
 
       <!-- In order for the "create bracket" button to be displayed, the user needs to be logged in, they can't already have
