add a checkbox to show the owner of each bracket in the brackets list
But only do it on the single pool page, because I don't want to add more to the main pools page.

--- a/client/views/brackets/list.html
+++ b/client/views/brackets/list.html
@@ -1,3 +1,7 @@
 <div ng-controller="ListBracketsController">
   <div class="allBracketsGrid" ng-grid="allBracketsGridOptions"></div>
+  <div class="checkbox" ng-show="displayShowOwner">
+    <label>
+      <input type="checkbox" id="showOwners" name="showOwners" ng-model="showOwners">Show owners?</label>
+  </div>
 </div>
