move showOwners field to a model object
Seeing if this fixes it on my iPhone.

--- a/client/views/brackets/list.html
+++ b/client/views/brackets/list.html
@@ -2,6 +2,6 @@
   <div class="allBracketsGrid" ng-grid="allBracketsGridOptions"></div>
   <div class="checkbox" ng-show="displayShowOwner">
     <label>
-      <input type="checkbox" id="showOwners" name="showOwners" ng-model="showOwners">Show owners?</label>
+      <input type="checkbox" id="showOwners" name="showOwners" ng-model="model.showOwners" ng->Show owners?</label>
   </div>
 </div>
